file retrieving feature added
