# cmd/api/docs/swagger.json
@@ -4,11 +4,62 @@
         "contact": {}
     },
     "paths": {
+        "/all": {
+            "get": {
+                "tags": [
+                    "File"
+                ],
+                "summary": "api for retrieve all files",
+                "operationId": "GetAllFiles",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page Number",
+                        "name": "page_number",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Count of Files",
+                        "name": "count",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Successfully retrieved all files",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/response.SingleFile"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to retrieve all files",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/uploads/one": {
             "post": {
                 "consumes": [
-                    "multipart/form-data",
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "tags": [
                     "File"
@@ -72,6 +123,23 @@
                 },
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "response.SingleFile": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "uploaded_at": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
                 }
             }
         }
