# pkg/api/handler/interfaces/file.go
@@ -4,4 +4,5 @@ import "github.com/gin-gonic/gin"
 
 type FileHandler interface {
 	UploadSingleFile(ctx *gin.Context)
+	GetAllFiles(ctx *gin.Context)
 }
